# todiscope-v3

./: .env.example  .gitignore  AI_GOVERNANCE_LOGGING_AUDIT_REPORT.md  AI_GOVERNANCE_LOGGING_QA_TEST_REPORT.md  CONSTRUCTION_COST_INTELLIGENCE_REPORTING_AUDIT.md  CORE_SKELETON_AUDIT_REPORT.md  CSRD_ENGINE_AUDIT_REPORT.md  CSRD_ENGINE_FINAL_AUDIT_AND_COMPLIANCE_REPORT.md  CSRD_ENGINE_FINAL_AUDIT_REPORT.md  CSRD_ENGINE_FINAL_AUDIT_REPORT_V2.md  CSRD_ENGINE_FINAL_AUDIT_VALIDATION.md  DATA_MIGRATION_ERP_READINESS_FINAL_VERIFICATION_AUDIT.md  DATA_MIGRATION_ERP_READINESS_VERIFICATION_AUDIT.md  DR1_BOUNDARY_AUDIT_REPORT.md  DR1_BOUNDARY_AUDIT_REPORT_V2.md  DR1_BOUNDARY_REAUDIT_REPORT.md  ENGINE5_BUILD_AUDIT_TASK_1.md  ENGINE5_REPORTING_EXTERNALIZATION_AUDIT.md  ENGINE_5_BUILD_AUDIT_TASK_2.md  ENGINE_5_POST_DEPLOYMENT_AUDIT.md  ENGINE_5_REPORTING_EXTERNALIZATION_AUDIT.md  ENGINE_5_REPORTING_EXTERNALIZATION_REAUDIT.md  ENGINE_5_REPORTING_EXTERNALIZATION_REAUDIT_FINAL.md  ENGINE_NAVIGATION_VERIFICATION.md  ENGINE_REPORT_BEHAVIOR_AUDIT.md  ENTERPRISE_AI_GOVERNANCE_ENGINE_INDEPENDENT_AUDIT.md  ENTERPRISE_AI_GOVERNANCE_ENGINE_REMEDIATION_COMPLETE.md  ENTERPRISE_AI_GOVERNANCE_ENGINE_REMEDIATION_VERIFICATION.md  ENTERPRISE_DATA_MIGRATION_ERP_READINESS_AUDIT_REPORT.md  ENTERPRISE_FEATURES_IMPLEMENTATION_COMPLETE.md  ENTERPRISE_INSURANCE_CLAIM_FORENSICS_AUDIT_SUMMARY.md  ENTERPRISE_INSURANCE_CLAIM_FORENSICS_CONTROL_FRAMEWORK_AUDIT_REPORT.md  ENTERPRISE_INSURANCE_CLAIM_FORENSICS_FINAL_AUDIT_REPORT.md  ENTERPRISE_INSURANCE_CLAIM_FORENSICS_INDEPENDENT_SYSTEMS_AUDIT_REPORT.md  (+34 more)
(+790 files in other folders)
