[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Use find_packages to discover packages, excluding non-package directories
packages = { find = { exclude = ["benchmarks*", "migrations*", "tests*", "htmlcov*", "__pycache__*", "*.pyc"] } }

[project]
name = "todiscope-v3-backend"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "python-multipart>=0.0.9",
  "SQLAlchemy[asyncio]>=2.0.30",
  "asyncpg>=0.29",
  "boto3>=1.34",
  "pdfplumber>=0.11",
  "pytesseract>=0.3.10",
  "Pillow>=10.0",
  "prometheus-client>=0.21",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=7.0.0",
  "httpx>=0.27",
  "aiosqlite>=0.20.0",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
addopts = "-q"
markers = [
  "integration: slower end-to-end tests",
]
